@@ -3,6 +3,7 @@ Noteworthy Changes in ssocr Releases
 
 Upcoming Version ?.??.? (????-??-??):
 -------------------------------------
+ * Fix decimal separator recognition when widest digit is a one
  * Add recognition of lower case variant of character 'h' to full charset
  * Add recognition of lower case variant of character 'r' to full charset
  * Documentation improvements
